# docs/openapi-tokoku.json
@@ -864,6 +864,22 @@
         "tags": ["buyer"],
         "summary": "Get all products",
         "description": "Get all products to buy",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "category",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "search",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
